[workspace]
members = ["commons", "dlmm_interface"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-client = "0.29.0"

solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
solana-account-decoder = "1.18.26"
spl-associated-token-account = "2.2.0"
spl-memo = "3.0.0"
spl-transfer-hook-interface = "0.5.0"

serde_json = "1.0.48"
serde = "1.0.104"
bincode = "1.3.3"
bs58 = "0.5.0"
bytemuck = "1.13.1"

rust_decimal = "1.31.0"
ruint = "1.3.0"
num-integer = "0.1.45"
num-traits = "0.2.16"

tokio = "^1.0"
futures-util = "0.3.0"
async-trait = "0.1.0"

anyhow = "1.0.98"
commons = { path = "./commons" }

[patch.crates-io.base64ct]
git = "https://github.com/RustCrypto/formats"
rev = "230a7ab3897ad8658d4d6ffb8d324bda641eb83d" # 1.7.3
