[package]
name = "dlmm_interface"
version = "0.9.0"
edition = "2021"

[features]
staging = []

[dependencies.borsh]
version = "^1.5"

[dependencies.bytemuck]
features = ["derive", "min_const_generics"]
workspace = true

[dependencies.num-derive]
version = "0.4.2"

[dependencies.num-traits]
workspace = true

[dependencies.serde]
optional = true
workspace = true

[dependencies.solana-program]
workspace = true

[dependencies.thiserror]
version = "^1.0"
